--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,8 @@ body {
 
 }
 
-h1 {
+h1
+ {
   font-family: 'Roboto Slab', serif;
   font-size: 3rem;
 }
@@ -71,4 +72,8 @@ input::placeholder {
 }
 .idea-card {
   display: block;
+}
+
+.delete {
+  border: 0px;
 }
