--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ h1
 
 h2 {
   display: inline-block;
+  align-self: flex-end;
   font-family: 'Roboto Slab';
   font-size: 4rem;
   color: #6D6E71;
@@ -103,4 +104,8 @@ input::placeholder {
 
 .delete {
   border: 0px;
+}
+
+.body-text {
+  font-size: 2rem;
 }
