--- a/styles.css
+++ b/styles.css
@@ -164,6 +164,10 @@ input::placeholder {
   h1 {
     font-size: 3.5rem;
   }
+  input {
+    height: 4rem;
+    font-size: 2rem;
+  }
 }
 
 @media screen and (min-width: 900px){
